--- a/programacion.modulo4/transportes/css/transportes.css
+++ b/programacion.modulo4/transportes/css/transportes.css
@@ -150,9 +150,96 @@ max-width: 225px;
      .servicio:nth-child(even) /*pares*/{
 flex-direction: row-reverse;
    }
+/*fin servicios*/
+/*inicio galeria*/
+.galeria{
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+   }
 
-   
+  .galeria img {
+width: 18%;
+border: 1px solid white;
+padding: 0,3px;
+box-sizing: border-box;
+margin-bottom: 20px;
+margin-right: 2%;
+   }
+/*fin galeria*/
+/*inicio contacto*/
 
-   
-   
-    /*fin servicios*/
+  .contacto {
+display: flex;
+gap: 24px;
+}
+
+  .contacto div {
+width: 100%;
+
+   }
+
+     .datos p {
+font-size: 14px;
+
+   }
+
+     .datos ul li {
+font-size: 14px;
+
+   }
+
+     .formulario p{
+display: flex;
+
+   }
+
+        .formulario p label{
+min-width: 80px;
+background-color: yellow;
+
+   }
+
+           .formulario p input ,
+         .formulario p textarea{
+width: 100%;
+background: #ccc;
+border-radius: 5px;
+border: 1px solid white;
+font-size: 14px;
+padding: 6px 10px;
+
+   }
+
+      .formulario p label{
+display: flex;
+align-items: center;
+
+   }
+
+            .formulario textarea{
+resize: none;
+height: 150px;
+   }
+
+
+            .formulario p:nth-child(4){
+                align-items: start;
+
+   }
+
+         .formulario input[type="submit"] {
+            background-color: #2e64a1;
+            box-shadow: 0 0 10px black (0, 0, 0, 0.4);
+            color: white;
+            font-size: 16px;
+            padding: 6px 20px;
+            cursor: pointer;
+            width: auto;
+            position: relative;
+            left: 80px;
+            
+
+   }
+
+
