--- a/tarea sitio web/css/kangoopet.css
+++ b/tarea sitio web/css/kangoopet.css
@@ -150,22 +150,33 @@ font-size: 20px;
         justify-content: space-between;
         color: white;
         column-gap: 20px;
+         max-width: 100%; 
+  max-height: 100%;
+  box-sizing: border-box;
+  flex-wrap: nowrap;
    }
 
      .marca {
         border: 1px solid #ccc;
         border-radius: 5px;
-        width: 18%;
+        width: 100%;
         text-align: center;
-        padding: 13px;
+        padding: 0%;
         box-sizing: border-box;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+
+        
    }
 
           .marca img {
        border-radius: 70%;
-       max-width: 90%;
+       max-width: 50%;
        box-shadow: 0 0 5px;
        margin-bottom: 10px;
+        max-width: 100%; 
+  max-height: 100%;
    }
 
          .marcas h6{
@@ -173,6 +184,7 @@ font-size: 20px;
        font-weight: normal;
        color: green;
        margin-top: 10px;
+       box-sizing: border-box;
    }
    
    .marcas h5{
@@ -184,6 +196,10 @@ color: white;
       font-size: 20px;
       margin-top: 20px;
       color: white;
+      margin: 0%;
+              max-width: 100%; 
+  max-height: 100%;
+  box-sizing: border-box;
    }
 
           h2 {
@@ -212,8 +228,11 @@ flex-direction: row-reverse;
 .gatosalimentos {
         display: flex;
         justify-content: space-between;
+        box-sizing: border-box;
         color: white;
         column-gap: 10px;
+        word-wrap: break-word;
+        flex-wrap: nowrap;
    }
 
 
@@ -224,6 +243,9 @@ border: 1px solid #ccc;
         text-align: center;
         padding: 13px;
         box-sizing: border-box;
+
+flex-wrap: nowrap;
+align-items: center;
     
    }
    .gatosalimentos .gato h5{
@@ -248,10 +270,117 @@ color: white;
    }
      .gato img {
 border-radius: 13px;
-max-width: 150px;
+max-width: 100px;
 align-self: flex-start;
 margin-bottom: 10px;
+box-sizing: border-box;
+ max-width: 100%; 
+  max-height: 100%;  
    }
 
 
     /*fin gatos*/
+     /*inicio promociones*/
+     .promociones{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    
+     }
+          .promociones img{
+     width: 30%;
+border: 10px solid green;
+padding: 0,3px;
+box-sizing: border-box;
+margin-bottom: 20px;
+margin-right: 2%;
+box-shadow: orange 10px 5px 3px;
+    
+     }
+
+
+      /*fin promociones*/
+        /*inicio contacto*/
+             .contacto{
+        color: white;
+        display: flex;
+gap: 24px;
+    }
+
+     .contacto div {
+width: 100%;
+
+   }
+
+     .datos p {
+font-size: 14px;
+
+   }
+
+     .datos ul li {
+font-size: 14px;
+ list-style-type: none;
+
+   }
+
+     .formulario p{
+display: flex;
+
+   }
+
+        .formulario p label{
+min-width: 80px;
+
+   }
+
+           .formulario p input ,
+         .formulario p textarea{
+width: 100%;
+background: white;
+border-radius: 5px;
+border: 1px solid white;
+font-size: 5px;
+padding: 6px 10px;
+
+   }
+
+      .formulario p label{
+display: flex;
+align-items: flex-start;
+
+   }
+
+            .formulario textarea{
+resize: none;
+height: 150px;
+   }
+
+
+            .formulario p:nth-child(4){
+                align-items: start;
+
+   }
+
+         .formulario input[type="submit"] {
+            background-color: green;
+            box-shadow: 0 0 10px black (0, 0, 0, 0.4);
+            color: white;
+            font-size: 16px;
+            padding: 6px 20px;
+            cursor: pointer;
+            width: auto;
+            position: relative;
+            left: 80px;
+            
+
+   }
+
+     material-icons{
+            background-color: yellow;
+          }
+          /*fin contacto*/
+
+
+
+
+        
