--- a/tarea sitio web/css/kangoopet.css
+++ b/tarea sitio web/css/kangoopet.css
@@ -154,6 +154,8 @@ font-size: 20px;
   max-height: 100%;
   box-sizing: border-box;
   flex-wrap: nowrap;
+  margin: 0;
+  padding: 0;
    }
 
      .marca {
@@ -166,6 +168,7 @@ font-size: 20px;
         align-items: center;
         display: flex;
         flex-direction: column;
+        margin: 0;
 
         
    }
@@ -223,7 +226,7 @@ color: white;
     /*inicio gatos*/
 
  .gatosalimentos{
-        display: flex;
+     display: flex;
         justify-content: space-between;
         color: white;
         column-gap: 20px;
@@ -231,6 +234,8 @@ color: white;
   max-height: 100%;
   box-sizing: border-box;
   flex-wrap: nowrap;
+  margin: 0;
+  padding: 0;
    }
 
      .gato {
@@ -241,20 +246,18 @@ color: white;
         padding: 0%;
         box-sizing: border-box;
         align-items: center;
-        flex-direction: column;
+        display: flex;
+        flex-direction: column;}
 
-        
+           .gato img {
+       border-radius: 70%;
+       max-width: 50%;
+       box-shadow: 0 0 5px;
+       margin-bottom: 10px;
+        max-width: 100%; 
+  max-height: 100%;
    }
 
-.gatosalimentos img{
-  width: 90%;
-border: 5px;
-padding: 0,3px;
-box-sizing: border-box;
-margin-bottom: 20px;
-margin-right: 2%;
-border-radius: 40px;
-}
 
 
     /*fin gatos*/
