--- a/cangoopetnext/src/styles/contacto.css
+++ b/cangoopetnext/src/styles/contacto.css
@@ -1,7 +1,8 @@
              .contacto{
-        color: white;
+        color: black;
         display: flex;
 gap: 24px;
+background-color: rgb(95, 194, 95);
     }
 
      .contacto div {
@@ -35,7 +36,7 @@ min-width: 80px;
 width: 100%;
 background: white;
 border-radius: 10px;
-border: 1px solid white;
+border: 1px solid black;
 font-size: 15px;
 padding: 6px 10px;
 
@@ -59,9 +60,9 @@ height: 150px;
    }
 
          .formulario input[type="submit"] {
-            background-color: green;
+            background-color: rgb(232, 179, 80);
             box-shadow: 0 0 10px black (0, 0, 0, 0.4);
-            color: white;
+            color: black;
             font-size: 16px;
             padding: 6px 20px;
             cursor: pointer;
