--- a/unidad4.tarea/public/stylesheets/style.css
+++ b/unidad4.tarea/public/stylesheets/style.css
@@ -150,3 +150,46 @@ margin-bottom: 20px;
     color: #458246;
     background-color: white;
 } 
+
+
+
+.login-body {
+  background: black;
+  font-family: Arial;
+}
+
+.login-card {
+  background: #111;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0px 0px 20px #00ff88;
+  color: white;
+}
+
+.login-card h3 {
+  color: #00ff88;
+}
+
+.form-control {
+  background: white;
+  border: 1px solid #00ff88;
+  color: white;
+}
+
+.form-control:focus {
+  background: black;
+  color: white;
+  border-color: #00ff88;
+  box-shadow: none;
+}
+
+.btn-success {
+  background: #00ff88;
+  border: none;
+  color: black;
+  font-weight: bold;
+}
+
+.btn-success:hover {
+  background: #00cc70;
+}
